front/src/App.css
.App {
  display: flex;
  flex-direction: column;

  position: relative;
  text-align: center;
  z-index: 10;

  /* margin: auto; */
  margin-top: 5%;
}
.submit-form{
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}
h1{
  color: pink;
}
input[type="file"] {
    display: none;
}
.input-wrap{
  width: 100%;
}
.custom-file-input {
    background-color: rgba(204, 204, 204, .3);
    border: 1px solid #ccc;
    border-radius:  5em;
    box-shadow: 15px 10px 12px 5px rgba(0,0,0,0.4),
            4px 4px 5px 2px rgba(0,0,0,0.3) inset;

    margin: 50px;

    display: inline-block;
    padding: 6px 12px;
    width: 33%;
    height: 40px;

    cursor: pointer;
}
.error-box{
  position: absolute;
  border-radius:  5em;
  top: calc(80%);
  border: 1px solid rgba(0,0,0, 0);
  background-color: rgba(204, 204, 204, .0);
  height: 0;
  color: rgb(90, 0, 0, 0);
  font-size: 0;
  transition: 1s ease-in-out;
}
.error-box > p{
  padding: 0px 50px;
}
#upload{
  display: inline-block;
  position: absolute;
  top: calc(80%);
  font-size: 5em;
  padding: 0;
  outline: none;
  border: none;
  background: none;

}
#download {
  padding: 100px;
  font-size: 5em;

  outline: none;
  border: none;
  background: none;
}
svg{
  display: inline-block;
  vertical-align: middle;
  margin-left:auto;
   margin-right:auto;
}
svg path{
fill: linear-gradient(
130deg
,#ff7a18,#af002d 41.07%,#319197 76.05%);
/* fill:rosybrown; */
}
.hidden{
  border: 1px solid rgba(0,0,0, 1);
  background-color: rgba(204, 204, 204, .3);
  box-shadow: 15px 10px 12px 5px rgba(0,0,0,0.4),
            4px 4px 5px 2px rgba(0,0,0,0.3) inset;
  height: calc(40%);
  font-size: 17px;
  text-align: center;
  color: rgb(90, 0, 0, 1);
}
.divs{
  margin-top: 100px;
}

